# cargo-workspace-version

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs
