[package]
name = "cargo-workspace-version"
version = "1.0.0"
edition = "2021"
description = "Cargo plugin to update all versions in a workspace"
license-file = "LICENSE"
homepage = "https://avalabs.org"
readme = "README.md"
authors = [
     "Ron Kuris (@rkuris) <ron.kuris@avalabs.org>",
]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
toml = "0.7.6"
toml_edit = "0.19.14"
